# command-minecraft-launcher

./: .gitignore  Cargo.toml
.well-known/: microsoft-identity-association.json
src/: downloader.rs  lib.rs  main.rs  minecraft_core.rs  post.rs
