[package]
name = "command-minecraft-launcher"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cursive - TUI
crossterm = "0.26.1"
cursive = { version = "0.20.0", default-features = false, features = [
    "maplit",
    "term_size",
    "crossterm",
    "crossterm-backend",
    "markdown",
] }

# minecraft_core
reqwest = { version = "0.11.14", features = ["stream", "json", "blocking"] }
tokio = { version = "1.25.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
futures = "0.3.4"
anyhow = "1.0.68"
colored = "2.0.0"
zip = "0.6.4"
walkdir = "2.3.2"
zstd = "0.12.3"
chrono = "0.4.23"
regex = "1.8.4"
lazy_static = "1.4.0"
url = { version = "2" }
http-downloader = { version = "0.3.2", features = ["status-tracker", "speed-limiter", "speed-tracker", "breakpoint-resume", "tracing", "bson-file-archiver"] }
indicatif = "0.17.6"


[dependencies.uuid]
version = "1.3.4"
features = [
    "v4",
    "v5",
    "macro-diagnostics",
]
